--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-    "name": "backend",
-    "version": "0.0.1",
-    "description": "Backend Testbed",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js",
-      "test": "jest",
-      "lint": "eslint --fix",
-      "build": "echo \"No build step required\""
-    },
-    "keywords": [],
-    "author": "",
-    "license": "MIT",
-    "dependencies": {
-      "bcrypt": "^5.1.1",
-      "body-parser": "^1.20.3",
-      "dotenv": "^16.4.7",
-      "express": "^4.21.2",
-      "express-session": "^1.18.1",
-      "express-validator": "^7.2.1",
-      "mockingoose": "^2.16.2",
-      "mongodb": "^6.12.0",
-      "mongoose": "^8.10.0",
-      "mongoose-to-swagger": "^1.5.1",
-      "passport": "^0.7.0",
-      "passport-github2": "^0.1.12",
-      "swagger-autogen": "^2.23.7",
-      "swagger-ui-express": "^5.0.1"
-    },
-    "devDependencies": {
-      "@eslint/js": "^9.18.0",
-      "eslint": "^9.18.0",
-      "eslint-config-prettier": "^9.1.0",
-      "eslint-plugin-prettier": "^5.2.1",
-      "globals": "^15.14.0",
-      "jest": "^29.7.0",
-      "nodemon": "^3.1.9",
-      "prettier": "^3.4.2"
-    },
-    "engines": {
-      "node": ">=16.0.0"
-    },
-    "packageManager": "pnpm@9.15.3"
-  }
-  
+  "name": "backend",
+  "version": "0.0.1",
+  "description": "Backend Testbed",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "lint": "eslint --fix",
+    "build": "echo \"No build step required\""
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "mockingoose": "^2.16.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.10.0",
+    "mongoose-to-swagger": "^1.5.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "packageManager": "pnpm@9.15.3"
+}
